traefik/traefik-daemonset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  serviceName: traefik-ingress-service
  replicas: 4
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
        - containerPort: 443
          hostPort: 443
          name: https
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - "--configfile=/config/traefik-https.toml"
        - "--api"
        - "--kubernetes"
        - "--logLevel=INFO"
        - "--defaultentrypoints=http,https"
        - "--entrypoints=Name:https Address::443 TLS"
        - "--entrypoints=Name:http Address::80"
        volumeMounts:
        - name: traefik-data
          mountPath: "/ssl"
  volumeClaimTemplates:
  - metadata:
      name: traefik-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: traefik
      resources:
        requests:
          storage: 100Mi

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
    - protocol: TCP
      port: 443
      name: https
